# smells

./: .actual.swp  .expected.swp  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  actual  backlog.py  expected  json_output_test_file.json  to_delete.rs  toto
.github/workflows/: main.yml
concept/: model.mdj
doc/: analysis_structure_architecture_decision_record.md  architecture_decision_record.md  coding_style.md  glossary.md  idea_installation.md  output.json  project_structure.txt
fs_generator/: Cargo.toml  run.sh
fs_generator/src/: main.rs
integration/: main.rs
integration/tests/: basic.rs
src/: analysis.rs  lib.rs  main.rs
src/analysis_module/: analysis.rs  mod.rs  public_analysis.rs
src/cli/: Cargo.toml  cli_lib.rs  mod.rs
src/cli/src/: lib.rs  main.rs
src/cli/tests/: end_2_end_test.rs
src/data_sources/: file_explorer.rs  file_system.rs  mod.rs
src/formatters/: json.rs
src/metrics/: line_count.rs  lines_count.rs  metric.rs  mod.rs  social_complexity.rs
src/viewers/: cli.rs
test/data/: file10.txt
tests/: Leistungsbericht_Supergenerator.sh  Leistungsberichtsgenerator.sh  create_fake_flat_project_files.sh  create_fake_project.sh  mod.rs
tests/cucumber/: cucumber_test.rs  cucumber_test_annex_functions.rs  cucumber_test_auxiliary_functions.rs  project.rs
tests/cucumber/features/: analysis.feature  analysis_ut.feature  basic_usages.feature  e2e.feature  end_to_end.feature  lines_count.feature  old_end_to_end.feature  social_complexity.feature  ultimate.feature  ultime.feature
tests/data/non_git_repository/: file5.txt
tests/e2e/: end_2_end_test.rs
