[package]
name = "smells"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
serde = { version = "1.0.156", features = ["derive"]}
serde_json = {version = "1.0.94", features = ["preserve_order"]}
git2 = "0.17.0"
predicates = "3.0.2"
walkdir = "2.3.3"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.0.1"
rstest = "0.17.0"
tempdir = "0.3.7"


[[test]]
name = "end_2_end_test"
path = "tests/e2e/end_2_end_test.rs"